--- a/app/src/main/res/layout/activity_jyshuji.xml
+++ b/app/src/main/res/layout/activity_jyshuji.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JYshujieActivity">
+    tools:context=".JYshujiActivity">
 
     <TextView
         android:id="@+id/tv_jyshuji_title"
