--- a/app/src/main/res/layout/activity_jyshuji.xml
+++ b/app/src/main/res/layout/activity_jyshuji.xml
@@ -10,11 +10,14 @@
         android:id="@+id/tv_jyshuji_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="84dp"
+        android:layout_marginBottom="80dp"
         android:text="借阅书籍"
         android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@+id/edtTxt_jyshuji_bianhao"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="84dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_jyshuji_bianhao"
