适配器与功能

--- a/app/src/main/res/layout/activity_chaxun.xml
+++ b/app/src/main/res/layout/activity_chaxun.xml
@@ -71,22 +71,6 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btn_cx_shanchu" />
 
-    <TextView
-        android:id="@+id/tv_cx_xianshi"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_cx_dianji" />
-
     <Button
         android:id="@+id/btn_cx_shanchu"
         android:layout_width="wrap_content"
@@ -96,4 +80,19 @@
         app:layout_constraintEnd_toStartOf="@+id/btn_cx_exit"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btn_cx_dianji" />
+
+    <ListView
+        android:id="@+id/lv_cx_display"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_cx_dianji" />
 </android.support.constraint.ConstraintLayout>
