--- a/app/src/main/res/layout/activity_chaxun.xml
+++ b/app/src/main/res/layout/activity_chaxun.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/timg"
     tools:context=".ChaxunActivity">
 
     <TextView
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         android:text="查询书籍"
         android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +26,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:text="查询条件："
+        android:textAllCaps="true"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/edt_cx_tiaojian"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -45,13 +49,14 @@
 
     <Button
         android:id="@+id/btn_cx_dianji"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="80dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
+        android:background="@drawable/anniu"
         android:text="查询"
-        android:textSize="18sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_cx_shanchu"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -60,12 +65,13 @@
 
     <Button
         android:id="@+id/btn_cx_exit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="80dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
+        android:background="@drawable/anniu"
         android:text="返回"
-        android:textSize="18sp"
+        android:textSize="30sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_cx_shanchu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -73,9 +79,11 @@
 
     <Button
         android:id="@+id/btn_cx_shanchu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="80dp"
+        android:background="@drawable/anniu"
         android:text="删除"
+        android:textSize="30sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_cx_dianji"
         app:layout_constraintEnd_toStartOf="@+id/btn_cx_exit"
         app:layout_constraintHorizontal_bias="0.5"
