--- a/app/src/main/res/layout/activity_chaxun.xml
+++ b/app/src/main/res/layout/activity_chaxun.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/timg"
+    android:background="@drawable/beijing"
     tools:context=".ChaxunActivity">
 
     <TextView
@@ -48,13 +48,13 @@
         app:layout_constraintStart_toEndOf="@+id/tv_cx_tiaojian" />
 
     <Button
-        android:id="@+id/btn_cx_dianji"
+        android:id="@+id/btn_cx_chaxun"
         android:layout_width="150dp"
         android:layout_height="80dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
-        android:background="@drawable/anniu"
+        android:background="@drawable/yi"
         android:text="查询"
         android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_cx_shanchu"
@@ -69,7 +69,7 @@
         android:layout_height="80dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:background="@drawable/anniu"
+        android:background="@drawable/san"
         android:text="返回"
         android:textSize="30sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_cx_shanchu"
@@ -81,13 +81,13 @@
         android:id="@+id/btn_cx_shanchu"
         android:layout_width="150dp"
         android:layout_height="80dp"
-        android:background="@drawable/anniu"
+        android:background="@drawable/er"
         android:text="删除"
         android:textSize="30sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btn_cx_dianji"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn_cx_chaxun"
         app:layout_constraintEnd_toStartOf="@+id/btn_cx_exit"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/btn_cx_dianji" />
+        app:layout_constraintStart_toEndOf="@+id/btn_cx_chaxun" />
 
     <ListView
         android:id="@+id/lv_cx_display"
@@ -102,5 +102,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_cx_dianji" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_cx_chaxun" />
 </android.support.constraint.ConstraintLayout>
