--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/timg"
+    android:background="@drawable/beijing"
     tools:context=".MainActivity">
 
     <TextView
@@ -25,7 +25,7 @@
         android:layout_width="150dp"
         android:layout_height="80dp"
         android:layout_marginTop="200dp"
-        android:background="@drawable/anniu"
+        android:background="@drawable/er"
         android:text="添加书籍"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_main_chaxun"
@@ -37,7 +37,7 @@
         android:id="@+id/btn_main_chaxun"
         android:layout_width="150dp"
         android:layout_height="80dp"
-        android:background="@drawable/anniu"
+        android:background="@drawable/san"
         android:text="查询书籍"
         android:textSize="24sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_main_tianjia"
@@ -50,7 +50,7 @@
         android:layout_width="150dp"
         android:layout_height="80dp"
         android:layout_marginTop="25dp"
-        android:background="@drawable/anniu"
+        android:background="@drawable/si"
         android:text="删除书籍"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_main_exit"
@@ -62,7 +62,7 @@
         android:id="@+id/btn_main_exit"
         android:layout_width="150dp"
         android:layout_height="80dp"
-        android:background="@drawable/anniu"
+        android:background="@drawable/wu"
         android:text="退出"
         android:textSize="24sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_main_shanchu"
